RT-11317 : twig autoescape js erong format error fixed

--- a/Resources/views/EmailTemplate/edit.html.twig
+++ b/Resources/views/EmailTemplate/edit.html.twig
@@ -4,7 +4,7 @@
 {% block form %}
     {{ parent() }}
     <script type="text/javascript">
-        {% autoescape true js %}
+        {% autoescape 'js' %}
             (function() {
                 function getSavedData() {
                     var savedData;
